# text-summariser-cli

./: .gitignore  README.md  environment.yml  nlp_summary.txt  pyproject.toml  summary.txt
src/: summariser.py
src/summariser/: __init__.py  cli.py  loaders.py  summariser.py  utils.py
tests/: test_utils.py
